2017/04/05 v177
	1. Fix fake spell caused by blizzard like 'flash heal' -> 'shadow mend'.

2017/04/04 v176
	1. Fix the cast bar won't hidden if system event don't trigger.

2017/04/01 v175
	1. Modify the artifact power display style.

2017/03/30 v174
	1. Fix for 7.2.0

2017/03/27 v170
	1. Add a menu "use mouse down" for raid panel.

2017/03/09 v169
	1. Fix the HELPFUL|PLAYER filter not works well.

2017/03/07 v168
	1. Fix the curreny info won't update.

2017/02/24 v167
	1. Fix a code error for raidpanel's aura refreshing.

2017/01/12 v166
	1. Update for the rogue's 10-max combo points.

2017/01/10 v165
	1. The label on nameplates will display a '+' for elite(yellow color), rare(white color), elite-rare(aqua color), boss(red color).

2016/12/23 v164
	1. Use esc to close container during combat would cause taint, since the problem can't be fixed, I'll bind escape key when the container is open and in-combat, and release it when continaer is closed or out-of-combat. It'd cause a tiny problem, you need esc twice to close all frames during combat, but I think it's acceptable.

2016/12/10 v163
	1. Fix popup-action won't show when alt+drag to create them, caused by v162.

2016/12/10 v162
	1. Fix the auto-gen popup bar auto hide for pet and mount.

2016/12/10 v161
	1. Since the quest reward all add to collection, there is no need to check it.

2016/12/10 v160
	1. Fix the container's name is changed when delete container that above it.

2016/12/10 v159
	1. Fix the popup button won't show when drag to generate it.

2016/12/10 v158
	1. Fix the container view syste's manager for english version.

2016/12/10 v157
	1. Fix the auto quest select item.

2016/12/10 v156
	1. Fix the auto finish quest without select.

2016/12/10 v155
	1. Re-fix the auto-gen flyout spell's visibility.

2016/12/09 v154
	1. ChatFrame'll show the tips when mouse is over links.
	2. Auto sell, auto repair, auto split and stack added for container.
	3. Auto quest added for quest mover.