@@ -1,7 +1,7 @@
 ## Interface: 70200
 ## Title: IGAS_UI
 ## Author: kurapica.igas@gmail.com
-## Version: v177
+## Version: v178
 ## Notes: UI demo for IGAS
 ## eMail: kurapica.igas@gmail.com
 ## URL: http://github.com/kurapica
