@@ -1,3 +1,6 @@
+2017/04/11 v178
+	1. Roll back to v176, the spell map will cause some spell can't be used by raid panel.
+
 2017/04/05 v177
 	1. Fix fake spell caused by blizzard like 'flash heal' -> 'shadow mend'.
 
